--- a/report.html
+++ b/report.html
@@ -360,24 +360,24 @@ Defense</h1>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
 <p>When a baseball is hit to left or right field, the side spin created
-through contact with the bat causes the ball to hook or tail towards the
+through contact with the bat causes the ball to hook or tail toward the
 foul line. This phenomenon exists regardless of the handedness of the
-batter - i.e. a ball hit by a right-handed batter to left OR right field
-will move towards the foul line, and the same is true for light-handed
-batters. Given the movement of the ball in flight, a left-handed
-thrower, who has the glove on their right hand, could have an advantage
-over a right-handed thrower on balls hit in the air to left field. As
-the batted ball tails towards the foul line, the left fielder moves to
-their right to catch the ball, and with the glove on their right hand
-they gain an advantage on the distance of the reach of their glove in
-that direction. The same is true for right-handed throwers playing right
-field; with the glove on their left hand, they could have an advantage
-as they move to their left to catch batted balls tailing towards the
-right field line.</p>
-<p>Note that for simplicity, moving forward left-handed throwing left
-fielders and right-handed throwing right fielders will be referred to as
-same-handed players, while right-handed left fielders and left-handed
-right fielders will be called opposite-handed players.</p>
+batter - i.e. a ball hit by a right-handed batter to left or right field
+will move in the direction of the foul line, and the same is true for
+light-handed batters. Given the movement of the ball in flight, a
+left-handed thrower, who has the glove on their right hand, could have
+an advantage over a right-handed thrower on balls hit in the air to left
+field. As the batted ball tails toward the foul line, the left fielder
+moves to their right to catch the ball, and with the glove on their
+right hand they might gain an advantage on the distance of the reach of
+their glove in that direction. The same is true for right-handed
+throwers playing right field; with the glove on their left hand, they
+could have an advantage as they move to their left to catch batted balls
+tailing toward the right field line.</p>
+<p>For simplicity, left-handed throwing left fielders and right-handed
+throwing right fielders will be referred to as same-handed players,
+while right-handed left fielders and left-handed right fielders will be
+called opposite-handed players.</p>
 </div>
 <div id="question" class="section level2">
 <h2>Question</h2>
@@ -474,15 +474,15 @@ twice in the data set.</p>
 <p><strong>TEAM</strong> - Team player played for. Note, players who
 appeared for multiple teams were removed from the data set. This was
 done to simplify the process of adjusting the data for Total Team Fly
-Balls / Inning during the regression analysis.</p>
+Balls / Inn during the regression analysis.</p>
 <p><strong>POSITION</strong> - Position played by the player, either LF
 (left field) or RF (right field).</p>
 <p><strong>THROWS</strong> - The hand the player throws with, either L
 (left) or R (right).</p>
-<p><strong>THROWS (INDICATOR)</strong> - Indicator variable used in
-order to run regression analysis on the Throws variable. Same-handed
-players are assigned a value of 1 and opposite-handed throwers are given
-a value of 0.</p>
+<p><strong>THROWS (INDICATOR)</strong> - Indicator variable used to run
+regression analysis on the Throws variable. Same-handed players are
+assigned a value of 1 and opposite-handed throwers are given a value of
+0.</p>
 <p><strong>PO / INN</strong> - PO (putouts or catches made) divided by
 the number of defensive innings played at the position. The average
 across all players in the data set is 0.2227 .</p>
@@ -500,15 +500,15 @@ average across all teams for the 2024 season is 0.9609 .</p>
 <p>Multiple linear regression was used to test if the independent
 variable Throws has an affect on the dependent variable PO / Inn. In
 essence, does a player’s handedness affect the number of catches they
-make per inning on average in the corner outfield positions? There are
-also some additional factors to consider. Faster players should cover
-more ground and catch more fly balls than slower players, and players
-who play for a team that allows more fly balls per inning would have
-more chances and should record more putouts than players on teams whose
-pitching staffs allow fewer fly balls per inning. To adjust for both
-Sprint Speed and Total Team Fly Balls / Inn, both of these independent
-variables were added to the regression model. The results of the
-regression are as follows:</p>
+make per inning in the corner outfield positions? There are also some
+additional factors to consider. Faster players should cover more ground
+and catch more fly balls than slower players. Also, players who play for
+a team that allows more fly balls per inning would have more chances and
+should record more putouts than players on teams whose pitching staffs
+allow fewer fly balls per inning. To adjust for both Sprint Speed and
+Total Team Fly Balls / Inn, both of these independent variables were
+added to the regression model. The results of the regression are as
+follows:</p>
 <pre><code>## 
 ## Call:
 ## lm(formula = `PO / Inn` ~ `Throws (Indicator)` + `Sprint Speed` + 
@@ -533,29 +533,28 @@ regression are as follows:</p>
 </div>
 <div id="summary" class="section level2">
 <h2>Summary</h2>
-<p>The regression model shows that a statistically significant positive
-relationship exists between same-handed corner outfielders and putouts
-per inning in the data set. However, only 20.65% of the variance in
-putouts per inning between players in the data is described by the
-independent variables included in the model (Throws, Sprint Speed, and
-Team Fly Balls / Inning), so there is uncertainty around the actual
-magnitude of the relationship between handedness and putouts per inning
-for defensive players in the corner outfield positions.</p>
+<p>The regression model shows a statistically significant positive
+relationship between same-handed corner outfielders and PO / Inn in the
+data set. However, only 20.65% of the variance in PO / Inn between
+players in the data is described by the independent variables included
+in the model (Throws, Sprint Speed, and Total Team Fly Balls / Inn), so
+there is uncertainty around the actual magnitude of the relationship
+between handedness and PO / Inn.</p>
 <p><strong>Throws (Indicator)</strong></p>
 <p>The estimated coefficient for the Throws variable is [1] 0.0183 , and
-is statistically significant from 0 meaning that there is a positive
-relationship between same-handed corner outfielders and putouts per
-inning. Since the indicator variable 1 for same-handed players and 0 for
-opposite-handed players was used, interpreted in context the coefficient
-provides the number of putouts per inning a player makes as a result of
-their handedness. This means that a same-handed corner outfielder has an
-advantage of almost 0.02 putouts per inning on average over
-opposite-handed corner outfielders. Over the course of a full season
-with say 1000 innings played, that advantage would result in almost 20
-additional catches which is significant in terms of run value for the
-team. However, due to the low R-squared value of the regression, it is
-unlikely that the magnitude of the affect of throwing-handedness on
-putouts per inning is as high as the estimate produced by the model.</p>
+it is statistically significant from 0 meaning that there is a positive
+relationship between same-handed corner outfielders and PO / Inn. Since
+the indicator variable was used (1 for same-handed players and 0 for
+opposite-handed players), interpreted in context the coefficient
+provides the additional number of PO / Inn a same-handed player makes.
+This means that a same-handed corner outfielder has an advantage of
+0.0183 PO / Inn on average over opposite-handed corner outfielders. Over
+the course of a full season with say 1000 innings played, that advantage
+would result in around 18 additional catches which is significant in
+terms of run value for the team. However, due to the low R-squared value
+of the regression, it is unlikely that the magnitude of the affect of
+throwing-handedness on PO / Inn is as high as the estimate produced by
+the model.</p>
 <p><strong>Sprint Speed</strong> The estimated coefficient for the
 variable Sprint Speed is [1] 0.002 . Multiplying a player’s Sprint Speed
 by .002 would indicate the number of catches per inning a player makes
@@ -569,36 +568,38 @@ catches per inning. This could be due to the fact that to play at least
 competent runner to begin with, so all players in the data set are close
 enough in their speed for that variable to not be a significant factor.
 The average Sprint Speed of players in the data set is 27.9 ft/sec while
-the average of all major league players in 2024 was 27.0 ft/sec.</p>
+the average across all major league players in 2024 is 27.0 ft/sec. In
+addition, other factors like positioning and jump may need to be
+adjusted for in order for Sprint Speed to gain statistical
+significance.</p>
 <p><strong>Total Team Fly Balls / Inn</strong> The estimated coefficient
-for the variable Total Team Fly Balls / Inn is [1] 0.1895 . Interpreted
-in context, if a team allows 0.9609 fly balls per innings (the major
-league average in 2024), then a corner outfielder would expect to make
-an additional 0.1821 catches per inning based solely on the number of
-non-home run fly balls allowed by the pitching staff of their team. Not
-surprisingly, the model found that the relationship between Total Team
-Fly Balls / Inning and Putouts / Inning to be statistically significant
-from 0.</p>
+for the variable Total Team Fly Balls / Inn is [1] 0.1895 . This means
+if a team allows 0.9609 fly balls per innings (the major league average
+in 2024), then a corner outfielder would expect to make an additional
+0.1821 catches per inning based solely on the number of non-home run fly
+balls allowed by the pitching staff of their team. Not surprisingly, the
+model found that the relationship between Total Team Fly Balls / Inn and
+PO / Inn is statistically significant from 0.</p>
 <p><strong>R-Squared</strong> The model produced an R-squared value of
-[1] 0.2065 , which means only about 20.65% of the variance in PO /
-Inning between corner outfielders in the data set is due to the
-variables that were tested - Throws, Sprint Speed, and Total Team Fly
-Balls / Inn. An R-squared value this low, means that there is a lot of
-noise in the data and that other factors beyond those studied here are
-present in determining putouts per inning for corner outfielders.</p>
+[1] 0.2065 , meaning only about 20.65% of the variance in PO / Inn
+between corner outfielders in the data set is due to the variables that
+were tested - Throws, Sprint Speed, and Total Team Fly Balls / Inn. With
+an R-squared value this low, there is likely a lot of noise in the data
+and that other factors beyond those studied here are contributing to PO
+/ Inn for corner outfielders.</p>
 <p>In conclusion, the relationship between same-handed corner
-outfielders and putouts per inning played is non-zero and positive for
-the observations in the data set, but due to the low R-squared value in
-the model it is unclear how impactful handedness is. Additional research
-is needed. Perhaps multiple seasons could be included to increase the
-size of the data set, and other variables should be considered such as
-outfielder positioning, jump, etc. Lastly, this was a quick analysis,
-but a more complete study of the topic might filter fly ball
-observations down to only those that require the outfielder to move in
-the direction of the foul line, or perhaps even just those fly balls in
-the “shadow” or “fringe” regions of the expected catch radius given the
-flight and trajectory of the batted ball and the starting position,
-jump, and foot speed of the player.</p>
+outfielders and PO / Inn is non-zero and positive for the observations
+in the data set, but due to the low R-squared value in the model it is
+unclear how impactful handedness is. Additional research is needed.
+Perhaps multiple seasons could be included to increase the size of the
+data set, and other variables should be considered such as outfielder
+positioning, jump, etc. Lastly, this was a quick analysis, but a more
+complete study of the topic might filter fly ball observations down to
+only those that require the outfielder to move in the direction of the
+foul line, or perhaps even just those fly balls in the “shadow” or
+“fringe” regions of the expected catch radius given the flight and
+trajectory of the batted ball and the starting position, jump, and foot
+speed of the player.</p>
 <p><em>Data Source: Fangraphs, Baseball Savant</em></p>
 </div>
 
